# crosswalk

./: .gitignore  README.md  docker-compose.yml  fabfile.py
api/: Dockerfile  README.md  consumer.py  fabfile.py  main.py  models.py  mutations.py  pyproject.toml  queries.py  settings.py  tasks.py  utils.py
api/tests/: conftest.py  test_auth.py  test_events.py  test_utils.py  utils.py
api/tests/events/: test_create.py  test_delete.py  test_events_actions.py  test_list.py  test_retrieve.py  test_update.py
client/: Dockerfile  package-lock.json  package.json
client/src/: app.vue  index.html  index.js  router.js  store.js  websocket_handler.js
client/src/components/: button.vue  events-list.vue  eventtype.vue  input.vue  map.vue  navbar.vue  textarea.vue  viewer.vue
client/src/components/common/: button.vue  input.vue
client/src/components/icons/: close.vue  dash.vue  menu.vue  notifications.vue
client/src/icons/: accident.vue  close.vue  dash.vue  death.vue  edit.vue  fight.vue  fire.vue  gunfire.vue  insane.vue  menu.vue  notifications.vue  options.vue  police.vue  resize.vue  robbery.vue  trash.vue
client/src/store/: index.js
client/src/styles/: app.scss  variables.scss
client/src/views/: event-form.vue  event.vue  map.vue
events/: Dockerfile  main.py  mutations.py  pagination.py  pyproject.toml  queries.py
events/tests/: conftest.py  test_events.py
eventsapi/: Dockerfile  main.py  models.py  pyproject.toml
eventsapi/tests/: conftest.py  test_create.py  test_delete.py  test_list.py  test_retrieve.py  test_update.py
messagesapi/: Dockerfile  main.py  models.py  pyproject.toml
reactionsapi/: Dockerfile  main.py  pyproject.toml  schemas.py
