[tool.poetry]
name = "eventsapi"
version = "0.1.0"
description = ""
authors = ["Anton Petrov <marblemonolit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.65.0"
motor = "^2.4.0"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.7"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
requests = "^2.25.1"
httpx = "^0.18.1"
pytest-cov = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
