[tool.poetry]
name = "messagesapi"
version = "0.1.0"
description = ""
authors = ["Anton Petrov <marblemonolit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.65.0"
motor = "^2.4.0"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
